@@ -58,11 +58,20 @@ public:
 		// ui
 		Glib::RefPtr<Gtk::UIManager> ui = get_ui_manager();
 
-		ui_id = ui->new_merge_id();
-
 		ui->insert_action_group(action_group);
 
-		ui->add_ui(ui_id, "/menubar/menu-edit/italicize-selected-subtitles", "italicize-selected-subtitles", "italicize-selected-subtitles");
+		Glib::ustring submenu = 
+			"<ui>"
+			"	<menubar name='menubar'>"
+			"		<menu name='menu-edit' action='menu-edit'>"
+			"			<placeholder name='text-formatting'>"
+			"				<menuitem action='italicize-selected-subtitles'/>"
+			"			</placeholder>"
+			"		</menu>"
+			"	</menubar>"
+			"</ui>";
+
+		ui_id = ui->add_ui_from_string(submenu);
 	}
 
 	/*
